--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "Your Name"
+  title: Devin Davidson
   navbar:
     left:
       - href: index.qmd
