--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
     
     tools:
       - icon: linkedin
-        href: https://www.linkedin.com/
+        href: linkedin.com/in/devin-davidson-52b6aa2b4
       - icon: github
         menu:
           - text: Source Code
